penpot-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: penpot-backend  
  name: penpot-backend
  namespace: penpot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: penpot-backend  
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        app: penpot-backend  
      labels:
        app: penpot-backend  
    spec:
      containers:
      - name: penpot-backend  
        image: penpotapp/backend:latest
        imagePullPolicy: Always        
        resources: {}
        volumeMounts:
        - mountPath: /opt/data
          name: penpot-assets-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: penpot-assets-data
        persistentVolumeClaim:
          claimName: penpot-assets-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: penpot-backend
  name: penpot-backend
  namespace: penpot
spec:
  ports:
  - name: "6060"
    port: 6060
    protocol: TCP
    targetPort: 6060
  selector:
    app: penpot-backend
