penpot-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: penpot-frontend  
  name: penpot-frontend
  namespace: penpot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: penpot-frontend  
  strategy: {}
  template:
    metadata:
      labels:
        app: penpot-frontend  
    spec:
      containers:
      - name: penpot-frontend
        image: penpotapp/frontend:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /opt/data
          name: penpot-assets-data
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: penpot-assets-data
        persistentVolumeClaim:
          claimName: penpot-assets-data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: penpot-frontend
  name: penpot-frontend
  namespace: penpot
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: penpot-frontend
