penpot-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penpot-redis
  labels:
    app: penpot-redis
  namespace: penpot
spec:
  selector:
    matchLabels:
      app: penpot-redis
  template:
    metadata:
      labels:
        app: penpot-redis
    spec:
      containers:
      - name: penpot-redis
        image: redis:6
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: redis
          containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: penpot-redis
  labels:
    app: penpot-redis
  namespace: penpot
spec:
  ports:
  - protocol: TCP
    port: 6379
  selector:
    app: penpot-redis
